--- a/package.json
+++ b/package.json
@@ -74,7 +74,11 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-regular-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"bootstrap": "^5.3.3",
+		"path-browserify": "^1.0.1",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
@@ -82,6 +86,7 @@
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router-dom": "^6.4.3",
+		"util": "^0.12.5"
 	}
 }
